# aoc-2025

./: pyproject.toml
advent-code-2025/advent-code-2025/: main.py  pyproject.toml
day01/: main.py
day02/: main.py
