[project]
name = "advent-code-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120


[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_unimported = true
